update circle-env-config-v2.sh